# exafmm-beta

./: .gitignore  .hgignore  .hgsub  .hgsubstate  CMakeLists.txt  Doxyfile  Doxyfile.in  INSTALL  LICENSE  Makefile  Makefile.am  Makefile.am.include  Makefile.bak  Makefile.in  Makefile.include  POLICY  README  README.md  TAGS  TODO  aclocal.m4  config.h  config.h.in  configure  configure.ac  configure.py  nightly.py
2d/: Makefile.include
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
conf/: rules  variables
example/: Makefile  nbody.cxx  vortex.cxx
examples/: CMakeLists.txt  Makefile  Makefile.am  Makefile.bak  Makefile.in  accuracy.reg  build_tree_cilk.c  data_rearrange.c  ewald.cxx  fmm.cxx  fmm_mpi.cxx  helmholtz_grad_spherical_kernel  helmholtz_spherical  hss.cxx  kernel.cxx  laplace_spherical_mpi  parallel.cxx  quantization.c  serial.cxx  serial2.cxx  serial_argv.cxx  sort.cxx  test_octree_build_T.c  time_Yokota01.reg  time_yokota01.reg  tree.cxx  utils.h  vec.cxx  wrapper.cxx
fast/: CMakeLists.txt  Makefile  body.h  bottomup.h  cartesian.h  dataset.h  evaluator.h  fdgl.cxx  kernel.h  kernel2.h  kernel3.h  logger.h  main.cc  main.cxx  parallelfmm.h  partition.h  serialfmm.h  sort.h  spherical.h  topdown.h  tree.h  treebuilder.h  types.h  vec.h  vtk.h
fast2/: CPUEvaluator.cxx  Makefile  bottomup.h  cartesian.h  dataset.h  evaluator.h  main.cxx  parallelfmm.h  partition.h  serialfmm.h  spherical.h  topdown.h  tree.h
fdgl/: test1_oEdges.csv  test1_oNodes.csv  test2_oEdges.csv  test2_oNodes.csv  test3_oNodes.csv  test4_oEdges.csv  test4_oNodes.csv  test5_oEdges.csv  testK5_oEdges.csv  testK5_oNodes.csv  testK6_oEdges.csv  testK6_oNodes.csv
gpu/: .gitignore  Makefile  approximate.cu  buildtree.h  cudavec.h  dataset.h  grouptargets.h  kernel.h  kernel2.h  logger.h  macros.h  main.cu  octree.h  scanKernels.cu  serial.cu  sortKernels.cu  sortKernels.th_o  thrust.cu  traversal.h  tree.cu  types.h  upwardpass.h
helmholtz/: Makefile  Makefile.am  Makefile.in  TODO  arrays.h  build_tree.h  build_tree_omp2.h  constants.h  fmm.cxx  fmm.h  kernel.cxx  kernel.h  main.cxx  translate.h  traversal.h  traversal2.h  tree.h  up_down_pass.h  up_down_pass2.h
hss/: Makefile.am  Makefile.in  TODO  helmholtz.cxx  laplace.cxx  laplace2D.cpp
include/: align.h  args.h  base_mpi.h  biotsavart.h  body.h  body_mpi.h  bottomup.h  bound_box.h  boundbox.h  bounds.h  build_tree.h  build_tree2.h  build_tree3.h  build_tree_cilk.h  build_tree_from_cluster.h  gpu.h  (+65 more)
kernel/: BiotSavartEvaluator.cxx  CMakeLists.txt  CPUCartesianLaplace.cxx  CPUEvaluator.cxx  CPUEwaldLaplace.cxx  CPUP2P.cxx  CPUSphericalLaplace.cxx  CPUSphericalStokes.cxx  GPUEvaluator.cxx  GPUEwaldLaplace.cu  GPUSphericalLaplace.cu  GPUSphericalStokes.cu  GPUVanDerWaals.cu  LaplaceEvaluator.cxx  Makefile  StretchingEvaluator.cxx  cartesian_cpu.cxx  cartesian_gpu.cu  cpuCartesianBiotSavart.cxx  cpuCartesianCoulombVdW.cxx  cpuCartesianGaussian.cxx  cpuCartesianKernel.cxx  cpuCartesianLaplace.cxx  cpuCartesianLaplaceTemplated.cxx  cpuCartesianStretching.cxx  cpuCoulombVdW.cxx  cpuEvaluator.cxx  cpuEwaldLaplace.cxx  cpuP2P.cxx  cpuSphericalBiotSavart.cxx  cpuSphericalCoulombVdW.cxx  cpuSphericalGaussian.cxx  cpuSphericalKernel.cxx  cpuSphericalLaplace.cxx  cpuSphericalStretching.cxx  cpuVanDerWaals.cxx  directCPU.cxx  gpuCartesianKernel.cu  gpuEvaluator.cu  gpuEvaluator.cxx  (+10 more)
kernels/: 3DLaplaceP2PCPU.cxx  3DLaplaceSphericalCPU.cxx  BiotSavartP2PCPU.cxx  BiotSavartP2PCPU.h  BiotSavartSphericalCPU.cxx  BiotSavartSphericalCPU.h  CMakeLists.txt  Empty.h  HelmholtzDrrP2PCPU.h  HelmholtzDrrSphericalCPU.h  HelmholtzGradP2PCPU.cxx  HelmholtzGradSphericalCPU.cxx  HelmholtzP2PAcousticsCPU.cxx  HelmholtzP2PCPU.cxx  HelmholtzP2PCPU.h  HelmholtzSphericalCPU.cxx  HelmholtzSphericalCPU.h  LaplaceCartesianCPU.cxx  LaplaceCartesianCPU.h  LaplaceP2PCPU.cxx  LaplaceP2PCPU.h  LaplaceSphericalCPU.cxx  LaplaceSphericalCPU.h  LaplaceSphericalCPU2.cxx  MaternCartesianCPU.cxx  MaternP2PCPU.cxx  biot_savart.h  biot_savart_p2p_cpu.h  biot_savart_spherical_cpu.h  helmholtz.h  helmholtz_p2p_cpu.h  helmholtz_spherical_cpu.h  laplace.h  laplace_cartesian_cpu.h  laplace_p2p_cpu.h  laplace_spherical_cpu.h  spherical.h
uniform/: Makefile  Makefile.am  Makefile.in  core.h  evaluator.h  fmm.cxx  kernel.h  kernels.h  kernels2.h  kernels_smooth.h  logger.h  main.cxx  parallelfmm.h  serialfmm.h  test.cxx  test_wrapper.f90  types.h  wrapper.cxx
unit_test/: CMakeLists.txt  Makefile  Nparallel.cxx  Nscaling.cxx  Nserial.cxx  alltoall.cxx  alltoallv.cxx  approx.cxx  bisection.cxx  bottomup.cxx  check_gpus.cxx  construct.cxx  cuprintf.cu  direct.cxx  direct_gpu.cxx  ewald_direct.cxx  ewald_fmm.cxx  fdgl.cxx  ijparallelrun.cxx  ijserialrun.cxx  index.cxx  kernel.cxx  let.cxx  link.cxx  median.cxx  morton.cxx  mpi.cxx  mpisplit.cxx  multisection.cxx  nth_element.cxx  overlap_comm.cxx  parallelrun.cxx  periodic_gpu.cxx  periodic_near.cxx  poisson.cxx  serialrun.cxx  shift.cxx  skip_tree.cxx  skiptree.cxx  stokesSerial.cxx  (+8 more)
wrapper/: BiotSavart.cxx  CMakeLists.txt  Gaussian.cxx  Laplace.cxx  Makefile  Stretching.cxx  coulomb.cxx  coulombVdW.cxx  ewald.cxx  exec.sh  host.cxx  initialize.cxx  md.h  mr3.cu  mr3.h  mr3_host.cxx  nbody.cxx  parallel_coulombVdW.cxx  serial_Ewald.cxx  serial_coulomb.cxx  serial_coulombVdW.cxx  test_coulomb.cxx  test_coulombVdW.cxx  test_parallel_coulombVdW.cxx  test_serial_coulomb.cxx  test_serial_coulombVdW.cxx  testlib.cxx  vtgrape.h  vtgrapeproto.h
wrappers/: Makefile  Makefile.am  Makefile.in  TODO  acoustics.cxx  ala3.fmm  charmm.cxx  charmm2.cxx  charmm3.cxx  charmm_io.mod  coulomb.cxx  cppmd.cxx  ewald.cxx  fmm.cxx  gromacs.cxx  laplace.cxx  matern.cxx  md_distributed.cxx  md_distributed_mpi  modylas.cxx  petiga.cxx  petiga2.cxx  restart.d  run_md.sh  sample.f90  sub.f90  test.inp  test_charmm.f90  test_cppmd.f90  test_gromacs.cxx  test_laplace.cxx  test_laplace.f90  test_matern.cxx  test_md_distributed.cxx  test_modylas.f90  test_petiga.cxx  test_petiga2.cxx  water.fmm  water.fmm_restart  water_16.fmm  (+2 more)
(+203 files in other folders)
