IF(USE_GPU)
  CUDA_ADD_LIBRARY(Kernels ${EQUATION}${BASIS}${DEVICE}.cu)
  CUDA_ADD_LIBRARY(P2PKernels ${EQUATION}P2P${DEVICE}.cu)
  TARGET_LINK_LIBRARIES(Kernels ${CUDA_LIBRARIES})
ELSE()
  ADD_LIBRARY(Kernels ${EQUATION}${BASIS}${DEVICE}.cxx)
  ADD_LIBRARY(P2PKernels ${EQUATION}P2P${DEVICE}.cxx)
ENDIF()
