SET(PARALLEL_SOURCES mpi.cxx shift.cxx nth_element.cxx bisection.cxx let.cxx parallelrun.cxx unpartition.cxx ijparallelrun.cxx Nparallel.cxx skip_tree.cxx overlap_comm.cxx fdgl.cxx)
SET(SERIAL_SOURCES construct.cxx kernel.cxx ewald_direct.cxx ewald_fmm.cxx serialrun.cxx unsort.cxx ijserialrun.cxx Nserial.cxx)
IF(USE_VTK)
    SET(SERIAL_SOURCES ${SERIAL_SOURCES} vtk.cxx)
ENDIF()
SET(PARALLEL_GPU_SOURCES check_gpus.cxx)
SET(SERIAL_GPU_SOURCES direct_gpu.cxx)

IF(USE_MPI)
    FOREACH(test ${PARALLEL_SOURCES})
        GET_FILENAME_COMPONENT(TestName ${test} NAME_WE)
        ADD_EXECUTABLE(test_${TestName} ${test})
        TARGET_LINK_LIBRARIES(test_${TestName} ${OBJ_LIBS})
        IF(USE_QUARK)
            TARGET_LINK_LIBRARIES(test_${TestName} quark)
        ENDIF()
        IF(USE_GPU)
            TARGET_LINK_LIBRARIES(test_${TestName} gpuKernel)
        ELSE()
            TARGET_LINK_LIBRARIES(test_${TestName} cpuKernel)
        ENDIF()
        IF(USE_VTK)
            TARGET_LINK_LIBRARIES(test_${TestName} ${VTK_LIBS})
        ENDIF()
        TARGET_LINK_LIBRARIES(test_${TestName} mpi mpi_cxx )
        ADD_TEST(${TestName} ${MPIEXEC} -np 4 ${CMAKE_CURRENT_BINARY_DIR}/test_${TestName})
    ENDFOREACH()
    IF(USE_GPU)
        FOREACH(test ${PARALLEL_GPU_SOURCES})
            GET_FILENAME_COMPONENT(TestName ${test} NAME_WE)
            ADD_EXECUTABLE(test_${TestName} ${test})
            TARGET_LINK_LIBRARIES(test_${TestName} ${OBJ_LIBS})
            IF(USE_QUARK)
                TARGET_LINK_LIBRARIES(test_${TestName} quark)
            ENDIF()
            TARGET_LINK_LIBRARIES(test_${TestName} gpuKernel)
            IF(USE_VTK)
                TARGET_LINK_LIBRARIES(test_${TestName} ${VTK_LIBS})
            ENDIF()
            TARGET_LINK_LIBRARIES(test_${TestName} mpi mpi_cxx )
            ADD_TEST(${TestName} ${MPIEXEC} -np 4 ${CMAKE_CURRENT_BINARY_DIR}/test_${TestName})
        ENDFOREACH()
    ENDIF()
ENDIF()

FOREACH(test ${SERIAL_SOURCES})
    GET_FILENAME_COMPONENT(TestName ${test} NAME_WE)
    ADD_EXECUTABLE(test_${TestName} ${test})
    TARGET_LINK_LIBRARIES(test_${TestName} ${OBJ_LIBS})
    IF(USE_QUARK)
        TARGET_LINK_LIBRARIES(test_${TestName} quark)
    ENDIF()

    IF(USE_GPU)
        TARGET_LINK_LIBRARIES(test_${TestName} gpuKernel)
    ELSE()
        TARGET_LINK_LIBRARIES(test_${TestName} cpuKernel)
    ENDIF()
    IF(USE_VTK)
        TARGET_LINK_LIBRARIES(test_${TestName} ${VTK_LIBS})
    ENDIF()
    ADD_TEST(${TestName} ${CMAKE_CURRENT_BINARY_DIR}/test_${TestName})
ENDFOREACH()

IF(USE_GPU)
    FOREACH(test ${SERIAL_GPU_SOURCES})
        GET_FILENAME_COMPONENT(TestName ${test} NAME_WE)
        ADD_EXECUTABLE(test_${TestName} ${test})
        TARGET_LINK_LIBRARIES(test_${TestName} ${OBJ_LIBS})
        IF(USE_QUARK)
            TARGET_LINK_LIBRARIES(test_${TestName} quark)
        ENDIF()
        TARGET_LINK_LIBRARIES(test_${TestName} gpuKernel)
        IF(USE_VTK)
            TARGET_LINK_LIBRARIES(test_${TestName} ${VTK_LIBS})
        ENDIF()
        ADD_TEST(${TestName} ${CMAKE_CURRENT_BINARY_DIR}/test_${TestName})
    ENDFOREACH()
ENDIF()
